chore(): fix style lint error

--- a/src/assets/stylesheets/patternfly-ng.scss
+++ b/src/assets/stylesheets/patternfly-ng.scss
@@ -1,1 +1,1 @@
-@import '../../../node_modules/@patternfly/patternfly-next-workshop/dist/patternfly.scss';
+@import "../../../node_modules/@patternfly/patternfly-next-workshop/dist/patternfly.scss";
