fix(button): added HTML5 attributes

--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,11 +1,23 @@
-<button class="pf-c-button" title="{{tooltip}}"
+<button class="pf-c-button"
+        [attr.form]="form"
+        [attr.formaction]="formAction"
+        [attr.formenctype]="formEncType"
+        [attr.formmethod]="formMethod"
+        [attr.formnovalidate]="formNoValidate"
+        [attr.formtarget]="formTarget"
+        [autofocus]="autofocus"
         [disabled]="disabled"
+        [id]="id"
+        [name]="name"
         [ngClass]="{
-          'pf-is-danger': type === 'danger',
-          'pf-is-primary': type === 'primary',
-          'pf-is-secondary': type === 'secondary',
-          'pf-is-tertiary': type === 'tertiary'
+          'pf-is-danger': style === 'danger',
+          'pf-is-primary': style === 'primary',
+          'pf-is-secondary': style === 'secondary',
+          'pf-is-tertiary': style === 'tertiary'
         }"
-        (click)="handleAction($event)">
+        [title]="tooltip"
+        [type]="type"
+        [value]="value"
+        (click)="handleClick($event)">
   <ng-content></ng-content>
 </button>
