feat(PF4): Upgrade to PatternFly 4
Upgrade to PatternFly 4 and update button styles with new modifiers.

--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -10,10 +10,13 @@
         [id]="id"
         [name]="name"
         [ngClass]="{
-          'pf-is-danger': style === 'danger',
-          'pf-is-primary': style === 'primary',
-          'pf-is-secondary': style === 'secondary',
-          'pf-is-tertiary': style === 'tertiary'
+          'pf-m-danger': style === 'danger',
+          'pf-m-primary': style === 'primary',
+          'pf-m-secondary': style === 'secondary',
+          'pf-m-tertiary': style === 'tertiary',
+          'pf-m-link': style === 'link',
+          'pf-m-action': style === 'action',
+          'pf-m-disabled': style === 'disabled'
         }"
         [title]="tooltip"
         [type]="type"
